# zdash

./: README.md  pyproject.toml
src/zdash/: __init__.py  cli.py  gui.py
src/zdash/gui/: __init__.py  card.py  editDialog.py  tagEdit.py
src/zdash/mods/: _base.py  eagle.py  obsidian.py
