[project]
name = "zdash"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
dependencies = [
    "pyqt-fluent-widgets[full]>=1.7.4",
    "eagle-wrap>=0.9.0",
    "pyqt5>=5.15.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
zdash = "zdash.cli:cli"
zdash-gui = "zdash.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zdash"]
